--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
+--extra-index-url https://download.pytorch.org/whl/cu118
 asposestorage==1.0.2
-
 dotdict==0.1
 dv==1.0.12
 einops==0.6.1
@@ -21,7 +21,8 @@ scikit_learn==1.3.0
 scipy==1.10.1
 scikit-image
 thop==0.1.1.post2209072238
-torch==2.0.0
+torch==2.0.0+cu118
+torchaudio==2.0.0
 torch_geometric==2.3.1
-torchvision==0.15.0
+torchvision==0.15.0+cu118
 tqdm==4.64.1
